polyfill ES6 Promises

--- a/assets/cordova/index.html
+++ b/assets/cordova/index.html
@@ -8,6 +8,7 @@
 
   <!-- STYLES -->
 
+  <script src="polyfills.js"></script>
   <script src="cordova.js"></script>
   <script>
     function loadApp() {
