--- a/assets/web/index.html
+++ b/assets/web/index.html
@@ -11,6 +11,8 @@
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon.png"/>
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon.png"/>
   <title>Colorgy</title>
+
+  <script src="polyfills.js"></script>
   <!-- STYLES -->
 </head>
 <body>
